fixed hmtl tanble errors

--- a/community/sbw/SBW/SBW_2016.html
+++ b/community/sbw/SBW/SBW_2016.html
@@ -6,20 +6,22 @@ sitemap: community/sbw
 
 <h2>2016 SOYBEAN BREEDERS &amp; PATHOLOGISTS WORKSHOP</h2>
 <hr >
-<h3>Registration, Versailles Foyer:</h3>
-Monday, Feb. 22nd, 10:30 am - 5 pm | Tuesday, Feb. 23rd, 7 am - 5 pm | Wednesday, Feb. 24th, 7 am - 10:30 am
-<hr />
-<h3>Workshop Coordinators:</h3>
-<p>Commercial Soybean Breeders' Committee members - <strong>Chris Tinius</strong> (chair), Bayer CropScience; 
-	<strong>Curtis Scherder</strong> Monsanto Co.; 
-	<strong>Leandro Mozzoni</strong> Monsanto Co.; 
-	<strong>Clint Mapel</strong> Dupont Pioneer</p>
 
-<p>Public Soybean Breeder - <strong>Andrew Scaboo</strong> Univ. of Missouri - Soybean Breeders' Workshop Chair<br />
-Public Soybean Breeder - <strong>Aaron Lorenz</strong>, Univ. of Minnesota - General Session Chair<br />
-Public Plant Pathologist - <strong>John Rupe</strong>, Univ. of Arkansas - General Session Co-Chair</p>
+<h4>Workshop Coordinators:</h4>
+<div>
+	<p>
+    	<strong>Chris Tinius</stong> (chair), Bayer CropScience<br>
+		<strong>Curtis Scherder</strong> Monsanto Co.<br>
+		<strong>Leandro Mozzoni</strong> Monsanto Co.<br>
+		<strong>Clint Mapel</strong> Dupont Pioneer<br>
+		<strong>Andrew Scaboo</strong> Univ. of Missouri<br>
+		<strong>Aaron Lorenz</strong>, Univ. of Minnesota<br />
+		<strong>John Rupe</strong>, Univ. of Arkansas	
+	</p>
+</div>
 
-<h3>Monday February 22nd, 2016 | Versailles 1 Room</h3>
+
+<h3>Monday February 22nd, 2016</h3>
 
 <table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
 	<thead>
