--- a/community/sbw/SBW/SBW_2014.html
+++ b/community/sbw/SBW/SBW_2014.html
@@ -51,58 +51,59 @@ sitemap: community/sbw
             </tr>
          </thead>
          <body>
-
-    <tr><td>Danny Singh</td><td>General Introduction</td></tr>
-    <tr><th colspan='2'>SESSION I: Soybean Drought Stress | Chairs: Tommy Carter, USDA-ARS  &amp; George Graef, Univ. Nebraska</th></tr>
-    <tr><td>Tom Sinclair, NC State</td><td>Physiological Input for Improved Soybean Drought Tolerance</td></tr>
-    <tr><td>Jim Specht, Univ. Nebraska</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Specht_SBW2014.pdf'>Soybean Yield Response to Scarce or Abundant Water- Retrospect and Prospect</a></td></tr>
-    <tr><td>Pengyin Chen, Univ. Arkansas</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Chen_SBW2014.pdf'>Drought Tolerance Traits for Improving Soybean Yield Under Stress</a></td></tr>
-    <tr><td>Charlie Messina, Pioneer</td><td>Developing Drought Tolerant Maize Hybrids for the US Corn-belt: Discovery to Product</td></tr>
-    <tr><td class="uk-padding-small">9:55</td><td>10:10</td><td colspan='2'>Coffee Break</td></tr>
-    <tr><th colspan='4'>SESSION II: Phenotyping and Physiology of Soybean Traits | Chairs: Brian Diers, Univ. Illinois &amp; Jim Specht, Univ. Nebraska</th></tr>
-    <tr><td class="uk-padding-small">10:10</td><td>10:35</td><td>Mike Gore, Cornell Univ.</td><td>High Throughput Phenotyping: Research and Potential Applications in Crops</td></tr>
-    <tr><td class="uk-padding-small">10:35</td><td>11:00</td><td>Felix Fritschi, Univ. Missouri</td><td>Mapping Physiological Traits</td></tr>
-    <tr><td class="uk-padding-small">11:00</td><td>11:25</td><td>Bill Schapaugh, Kansas State Univ.</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Schapaugh_SBW2014.pdf'>Physiological and Spectral Parameters in Soybean Associated with Seed Yield</a></td></tr>
-    <tr><td class="uk-padding-small">11:25</td><td>11:50</td><td>Spyridon Mourtizinis, Univ. Wisconsin</td><td>The Use of Reflectance and Weather Data for in Season Soybean Yield Prediction</td></tr>
-    <tr><td class="uk-padding-small">11:50</td><td>12:05</td><td>Carol Fox, Univ. Illinois</td><td>High-throughput Photosynthesis Analysis in SoyNAM</td></tr>
-    <tr><td class="uk-padding-small">12:05</td><td>12:20</td><td>Katy Martin Rainey, Purdue Univ.</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Rainey_SBW2014.pdf'>Phenotyping Canopy Closure in SoyNAM Using Digital Imagery</a></td></tr> 
-    <tr><td class="uk-padding-small">12:20</td><td>1:50</td><td colspan='2'>Lunch</td></tr>
-    <tr><td class="uk-padding-small">1:50</td><td>1:55</td><td>Seth Naeve</td><td>Introduction and Announcements</td></tr>
-    <tr><th colspan='4'>SESSION III:  Soybean Production Management | Chair: Seth Naeve, Univ. Minnesota</th></tr>
-    <tr><td class="uk-padding-small">1:55</td><td>2:20</td><td>Shawn Conley, Univ. Wisconsin</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Conley_SBW2014.pdf'>Genetic Gain X Management Interactions</a></td></tr>
-    <tr><td class="uk-padding-small">2:20</td><td>2:45</td><td>Seth Naeve</td><td>Max Yields Through Crop Inputs: A National Project</td></tr>
-    <tr><td class="uk-padding-small">2:45</td><td>3:10</td><td>Larry Purcell, Univ. Arkansas</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Purcell_SBW2014.pdf'>The Physiology Behind 100+ Bushel Yields in Arkansas</a></td></tr>
-    <tr><td class="uk-padding-small">3:10</td><td>3:35</td><td>TBD-Pioneer</td><td>Prescriptions for Farmers: Field 360</td></tr>
-    <tr><td class="uk-padding-small">3:35</td><td>3:50</td><td colspan='2'>Break</td></tr>
-    <tr><th colspan='4'>SESSION IV:  Soybean Seed Composition | Chair: Clem Weidbrenner, HAPI-Ohio</th></tr>
-    <tr><td class="uk-padding-small">3:50</td><td>4:15</td><td>Rouf Mian, Ohio State Univ.</td><td>Increasing soybean seed protein without negative effect on yield</td></tr>
-    <tr><td class="uk-padding-small">4:15</td><td>4:35</td><td>Jim Sutter, CEO,<br />US Soybean Export Council</td><td>What our international purchasers are requesting</td></tr>
-    <tr><td class="uk-padding-small">4:35</td><td>&nbsp;</td><td colspan='2'>Announcements &amp; Adjourn</td></tr>
-</table>
-</body>
+            <tr><td>Danny Singh</td><td>General Introduction</td></tr>
+            <tr><th colspan='2'>SESSION I: Soybean Drought Stress | Chairs: Tommy Carter, USDA-ARS  &amp; George Graef, Univ. Nebraska</th></tr>
+            <tr><td>Tom Sinclair, NC State</td><td>Physiological Input for Improved Soybean Drought Tolerance</td></tr>
+            <tr><td>Jim Specht, Univ. Nebraska</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Specht_SBW2014.pdf'>Soybean Yield Response to Scarce or Abundant Water- Retrospect and Prospect</a></td></tr>
+            <tr><td>Pengyin Chen, Univ. Arkansas</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Chen_SBW2014.pdf'>Drought Tolerance Traits for Improving Soybean Yield Under Stress</a></td></tr>
+            <tr><td>Charlie Messina, Pioneer</td><td>Developing Drought Tolerant Maize Hybrids for the US Corn-belt: Discovery to Product</td></tr>
+            <tr><td colspan='2'>Coffee Break</td></tr>
+            <tr><th colspan='2'>SESSION II: Phenotyping and Physiology of Soybean Traits | Chairs: Brian Diers, Univ. Illinois &amp; Jim Specht, Univ. Nebraska</th></tr>
+            <tr><td>Mike Gore, Cornell Univ.</td><td>High Throughput Phenotyping: Research and Potential Applications in Crops</td></tr>
+            <tr><td>Felix Fritschi, Univ. Missouri</td><td>Mapping Physiological Traits</td></tr>
+            <tr><td>Bill Schapaugh, Kansas State Univ.</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Schapaugh_SBW2014.pdf'>Physiological and Spectral Parameters in Soybean Associated with Seed Yield</a></td></tr>
+            <tr><td>Spyridon Mourtizinis, Univ. Wisconsin</td><td>The Use of Reflectance and Weather Data for in Season Soybean Yield Prediction</td></tr>
+            <tr><td>Carol Fox, Univ. Illinois</td><td>High-throughput Photosynthesis Analysis in SoyNAM</td></tr>
+            <tr><td>Katy Martin Rainey, Purdue Univ.</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Rainey_SBW2014.pdf'>Phenotyping Canopy Closure in SoyNAM Using Digital Imagery</a></td></tr> 
+            <tr><td colspan='2'>Lunch</td></tr>
+            <tr><td>Seth Naeve</td><td>Introduction and Announcements</td></tr>
+            <tr><th colspan='2'>SESSION III:  Soybean Production Management | Chair: Seth Naeve, Univ. Minnesota</th></tr>
+            <tr><td>Shawn Conley, Univ. Wisconsin</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Conley_SBW2014.pdf'>Genetic Gain X Management Interactions</a></td></tr>
+            <tr><td>Seth Naeve</td><td>Max Yields Through Crop Inputs: A National Project</td></tr>
+            <tr><td>Larry Purcell, Univ. Arkansas</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Purcell_SBW2014.pdf'>The Physiology Behind 100+ Bushel Yields in Arkansas</a></td></tr>
+            <tr><td>TBD-Pioneer</td><td>Prescriptions for Farmers: Field 360</td></tr>
+            <tr><td colspan='2'>Break</td></tr>
+            <tr><th colspan='2'>SESSION IV:  Soybean Seed Composition | Chair: Clem Weidbrenner, HAPI-Ohio</th></tr>
+            <tr><td>Rouf Mian, Ohio State Univ.</td><td>Increasing soybean seed protein without negative effect on yield</td></tr>
+            <tr><td>Jim Sutter, US Soybean Export Council</td><td>What our international purchasers are requesting</td></tr>
+            <tr><td colspan='2'>Announcements &amp; Adjourn</td></tr>
+        </body>
+    </table>
 </div>
 
 <h3>Wednesday, February 19</h3>
-<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
-    <thead>
-        <tr>
-            <th class="uk-table-shrink">Start</th>
-            <th class="uk-table-shrink">End</th>
-            <th class="uk-table-expand">Speaker</th>
-            <th class="uk-table-expand">Topic</th>
-        </tr>
-    </thead>
-<tr><td class="uk-padding-small">8:00</td><td>8:10</td><td>Katy M. Rainey, Purdue Univ.<br />Poster Committee</td><td>Welcome and Announcements<br />A brief explanation of how the SBW operates<br />Poster Winners Announced</td></tr>
-<tr><td class="uk-padding-small">8:10</td><td>8:25</td><td>Rich Joost,<br />SmithBucklin/United Soybean Board</td><td>The USB/Monsanto/Pioneer International High-Oleic Soy Collaboration</td></tr>
-<tr><td class="uk-padding-small">8:25</td><td>8:35</td><td></td><td>The cross commodity ASTA protocol for establishing and maintaining genetic integrity in breeding materials</td></tr>
-<tr><td class="uk-padding-small">8:35</td><td>9:00</td><td>Jiaoping Zhang, South Dakota State Univ.</td><td>Genome-wide Association Study of Agronomic and Seed Quality Traits for Early Mature Soybean Germplasm</td></tr>
-<tr><td class="uk-padding-small">9:00</td><td>9:20</td><td>From the Floor</td><td>Retirements &amp; Announcements</td></tr>
-<tr><td class="uk-padding-small">9:20</td><td>9:35</td><td>Gary Stacey, Univ. Missouri</td><td>Novel germplasm resources for soybean breeding and genetics</td></tr>
-<tr><td class="uk-padding-small">9:35</td><td>9:50</td><td>Perry Cregan, USDA-ARS, Beltsville</td><td>Status of the 50K SNP genotyping of germplasm collection</td></tr>
-<tr><td class="uk-padding-small">9:50</td><td>10:05</td><td>David Grant, USDA-ARS, Ames, IA</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Grant_SBW2014.pdf'>SoyBase Update</a></td></tr>
-<tr><td class="uk-padding-small">10:05</td><td>10:20</td><td>Committee Member</td><td>Soybean Germplasm Committee Report</td></tr>
-<tr><td class="uk-padding-small">10:20</td><td>10:35</td><td>David Wooten</td><td>Soybean Genetics Committee Report</td></tr>
-<tr><td class="uk-padding-small">10:35</td><td>10:50</td><td>Kristin Bilyeu, USDA-ARS, Columbia</td><td>SoyGEC report</td></tr>
-<tr><td class="uk-padding-small">&nbsp;</td><td>&nbsp;</td><td>Katy Martin Rainey</td><td>Adjourn</td></tr>
-</table>
+<div class="uk-overflow-auto">
+	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+         </thead>
+         <body>
+            <tr><td>Katy M. Rainey, Purdue Univ.</td><td>Welcome and Announcements<br />A brief explanation of how the SBW operates<br />Poster Winners Announced</td></tr>
+            <tr><td>Rich Joost, SmithBucklin/United Soybean Board</td><td>The USB/Monsanto/Pioneer International High-Oleic Soy Collaboration</td></tr>
+            <tr><td colspan='2'>The cross commodity ASTA protocol for establishing and maintaining genetic integrity in breeding materials</td></tr>
+            <tr><td>Jiaoping Zhang, South Dakota State Univ.</td><td>Genome-wide Association Study of Agronomic and Seed Quality Traits for Early Mature Soybean Germplasm</td></tr>
+            <tr><td colspan='2'>From the Floor: Retirements &amp; Announcements</td></tr>
+            <tr><td>Gary Stacey, Univ. Missouri</td><td>Novel germplasm resources for soybean breeding and genetics</td></tr>
+            <tr><td>Perry Cregan, USDA-ARS</td><td>Status of the 50K SNP genotyping of germplasm collection</td></tr>
+            <tr><td>David Grant, USDA-ARS</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2014/Grant_SBW2014.pdf'>SoyBase Update</a></td></tr>        
+            <tr><td>Committee Member</td><td>Soybean Germplasm Committee Report</td></tr>
+            <tr><td>David Wooten</td><td>Soybean Genetics Committee Report</td></tr>
+            <tr><td>Kristin Bilyeu, USDA-ARS</td><td>SoyGEC report</td></tr>
+            <tr><td>Katy Martin Rainey</td><td>Adjourn</td></tr>
+        </body>
+    </table>
+</div>
 
