--- a/community/sbw/SBW/SBW_2016.html
+++ b/community/sbw/SBW/SBW_2016.html
@@ -116,6 +116,7 @@ sitemap: community/sbw
 		</body>
 	</table>
 </div>
+<hr >
 
 <h3>SPECIAL MEETINGS and WORKSHOPS</h3>
 
@@ -152,70 +153,82 @@ sitemap: community/sbw
         </thead>
         <body>
 			<tr><td>Meredith Mendola &amp; Susannah Cooper</td><td>Panel Discussion<br />Skills to pay the bills:Success in a modern workplace</td></tr>
+			<tr><td>Troy Cary</td><td>Technicians Workshop</td></tr>
+			<tr><td>Anne Gillen</td><td>South Uniform Regional Testing</td></tr>
+			<tr><td>Gary Nowling</td><td>North Uniform Regional Testing</td></tr>
+			<tr><td>Troy Cary</td><td>SCN Regional Testing</td></tr>
+		</body>
+	</table>
+</div>
+
+
+<h4>Wednesday 02/24/2016</h4>
+<div class="uk-overflow-auto">
+	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+			<tr><td>Tommy Carter</td><td>Public-Private Southern Breeders' Meeting</td></tr>
+			<tr><td>Kelly Whiting</td><td>USB Composition Workshop</td>
+		</body>
+	</table>
+</div>		
+
+<hr >
 
 
 
 
-Technicians Workshop, Troy Cary | 8:00 am - 12:00 pm | St. Moritz and Bern room<br />
-Social Hour | 5:30 pm - 6:30 pm | Versailles Foyer<br />
-Poster Session | 5:30 pm - 6:30 pm | Versailles 2 room<br />
-Uniform Regional Testing: South, Anne Gillen | 7:00 pm - 8:00 pm | Davos room<br />
-Uniform Regional Testing: North, Gary Nowling | 7:00 pm - 7:30 pm | Alpine II room<br />
-SCN Regional Testing, Troy Cary | 7:30 pm - 8:00 pm | Alpine II room<br />
-
-<h3>Wednesday 02/24/2016</h3>
-Continental Breakfast | 6:45 am - 8:00 am | Versailles Foyer<br />
-Public-Private Southern Breeders' Meeting, Tommy Carter | 7:00 am - 8:00 am | Alpine II room<br />
-USB Composition Workshop, Kelly Whiting | 11:00 am - 11:00 am Thursday Feb. 25th | St. Moritz room<br />
 
 <h3>Agenda for USB Seed Composition Workshop</h3>
 <h4>February 24th and 25th, 2016 | St. Louis, MO | Sheraton Westport Chalet Hotel</h4>
-
 <p>The 2016 USB Seed Composition Workshop highlights current research on soybean seed composition and quality traits and presentations on the value and delivery of soybean quality traits to the market.  The workshop will begin immediately after the Soybean Breeders' Workshop and thus begin Wednesday February 24th, 2016 at 11:00 am.  It will be in the St Moritz/Bern conference room of the Sheraton Chalet Hotel.</p>
+<hr >
 
-<h3>Wednesday February 24th, 2016</h3>
-<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
-	<thead>
-        <tr>
-            <th class="uk-table-expand">Start</th>
-            <th class="uk-table-expand">End</th>
-            <th class="uk-table-expand">Speaker</th>
-            <th class="uk-table-expand">Topic</th>
-        </tr>
-    </thead>
-<tbody>
-	<tr><td>11:00am</td><td>11:05am</td><td> Mark Leitman, USB staff</td><td>Welcome and Introduction to Session</td></tr>
-	<tr><td>11:05am</td><td>11:35am</td><td> John Brake, North Carolina State University</td><td>Update on development of a tool for carbohydrate breeding: Sucrose content index relative to metabolizable energy content of animal feed</td></tr> 
-	<tr><td>11:35am</td><td>12:00pm</td><td> Zenglu Li, University of Georgia</td><td>Prospect of simultaneous genetic gains in yield and protein content in soybean </td></tr>
+<h4>Wednesday February 24th, 2016</h4>
+<div class="uk-overflow-auto">
+	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+			<tr><td>Mark Leitman, USB staff</td><td>Welcome and Introduction to Session</td></tr>
+			<tr><td>John Brake, North Carolina State Univ.</td><td>Update on development of a tool for carbohydrate breeding: Sucrose content index relative to metabolizable energy content of animal feed</td></tr> 
+			<tr><td>Zenglu Li, Univ. of Georgia</td><td>Prospect of simultaneous genetic gains in yield and protein content in soybean </td></tr>
+			<tr><td colspan='2'>Lunch (on your own)</td></tr>
+			<tr><td colspan='2'>USB Carbohydrate Traits project update</td></tr>
+			<tr><td colspan='2'>USB Increased Oil Content project update</td></tr>
+			<tr><td colspan='2'>Break</td></tr>
+			<tr><td colspan='2'>USB Increased Protein Content and Amino Acids project update</td></tr>
+			<tr><td colspan='2'>USB Stearic Acid project update</td></tr>
+			<tr><td colspan='2'>Dinner for USB composition project researchers (only)</td></tr>
+		</body>
+	</table>
+</div>	
 
-	<tr><td>12:00pm</td><td>1:20pm</td><td colspan='2'>Lunch (on your own)</td></tr>
-
-	<tr><td>1:20pm</td><td>2:20pm</td><td colspan='2'>USB Carbohydrate Traits project update</td></tr>
-	<tr><td>2:20pm</td><td>3:20pm</td><td colspan='2'>USB Increased Oil Content project update</td></tr>
-	<tr><td>3:20pm</td><td>3:40pm</td><td colspan='2'>Break</td></tr>
-	<tr><td>3:40pm</td><td>4:40pm</td><td colspan='2'>USB Increased Protein Content and Amino Acids project update</td></tr>
-	<tr><td>4:40pm</td><td>5:40 pm</td><td colspan='2'>USB Stearic Acid project update</td></tr>
-
-	<tr><td>6:15pm</td><td> </td><td colspan='2'>Dinner for USB composition project researchers (only)</td></tr><br />
-				
-</tbody>
-</table>
-<h3>Thursday February 25th, 2016</h3>
-<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
-	<thead>
-        <tr>
-            <th class="uk-table-expand">Start</th>
-            <th class="uk-table-expand">End</th>
-            <th class="uk-table-expand">Speaker</th>
-            <th class="uk-table-expand">Topic</th>
-        </tr>
-    </thead>
-<tbody>
-	<tr><td>8:00am</td><td>8:05am</td><td>Kelly Whiting, USB staff</td><td>Welcome &amp; Introduction to Session </td></tr>
-	<tr><td>8:05am</td><td>9:05am</td><td colspan='2'>USB High Oleic Breeding project update</td></tr>
-	<tr><td>9:05am</td><td>9:50am</td><td>Chris Schroeder, Centrec Consulting Group, LLC</td><td>Market Considerations for Extracting Value from Soybean Compositional Enhancement</td></tr>
-	<tr><td>9:50am</td><td>10:10am</td><td colspan='2'>Break</td></tr>
-	<tr><td>10:10am</td><td>10:25am</td><td>Dan Corcoran, USB Farmer-Director</td><td>Update on USB Value Task Force</td></tr>	
-	<tr><td>10:25am</td><td>11:00am</td><td>Gordon Denny, Consultant, Denny LLC</td><td>What Will it Take to Introduce into the Market Soybean Meal Derived from Varieties with Improved Meal Traits</td></tr>
-</tbody>
-</table>
+<h4>Thursday February 25th, 2016</h4>
+<div class="uk-overflow-auto">
+	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+			<tr><td>Kelly Whiting, USB staff</td><td>Welcome &amp; Introduction to Session </td></tr>
+			<tr><td colspan='2'>USB High Oleic Breeding project update</td></tr>
+			<tr><td>Chris Schroeder, Centrec Consulting Group, LLC</td><td>Market Considerations for Extracting Value from Soybean Compositional Enhancement</td></tr>
+			<tr><td colspan='2'>Break</td></tr>
+			<tr><td>Dan Corcoran, USB Farmer-Director</td><td>Update on USB Value Task Force</td></tr>	
+			<tr><td>Gordon Denny, Consultant, Denny LLC</td><td>What Will it Take to Introduce into the Market Soybean Meal Derived from Varieties with Improved Meal Traits</td></tr>
+		</body>
+	</table>
+</div>	
