--- a/community/sbw/SBW/SBW_2016.html
+++ b/community/sbw/SBW/SBW_2016.html
@@ -5,22 +5,20 @@ sitemap: community/sbw
 ---
 
 <h2>2016 SOYBEAN BREEDERS &amp; PATHOLOGISTS WORKSHOP</h2>
-<hr >
-<div>
 <h4>Workshop Coordinators:</h4>
-	<p>
-    	Chris Tinius (chair), Bayer CropScience<br /> 
-		Curtis Scherder, Monsanto Co.<br /> 
-		Leandro Mozzoni Monsanto Co.<br /> 
-		Clint Mapel Dupont Pioneer<br /> 
-		Andrew Scaboo Univ. of Missouri<br /> 
-		Aaron Lorenz, Univ. of Minnesota<br />
-		John Rupe, Univ. of Arkansas	
-	</p>
-</div>
+<p>
+    <strong>Chris Tinius</strong>, (chair), Bayer CropScience;
+	<strong>Curtis Scherder</strong>, Monsanto Co.;
+	<strong>Leandro Mozzoni</strong>, Monsanto Co.;
+	<strong>Clint Mapel</strong>, Dupont Pioneer;
+	<strong>Andrew Scaboo</strong>, Univ. of Missouri;
+	<strong>Aaron Lorenz</strong>, Univ. of Minnesota;
+	<strong>John Rupe</strong>, Univ. of Arkansas	
+</p>
 
 
-<h3>Monday February 22nd, 2016</h3>
+<hr >
+<h3>Monday, February 22nd, 2016</h3>
 <div class="uk-overflow-auto">
 	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
         <thead>
@@ -47,7 +45,7 @@ sitemap: community/sbw
 		
 
 
-<h3>Tuesday Morning February 23rd, 2016</h3>
+<h3>Tuesday, February 23rd, 2016</h3>
 <div class="uk-overflow-auto">
 	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
         <thead>
@@ -85,13 +83,13 @@ sitemap: community/sbw
 			<tr><td>Martin Chilvers, Michigan State Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Chilvers.pdf">Oomycetes associated with soybean disease and improved molecular diagnostics</a></td></tr>
 			<tr><td>John McDowell, Virginia Tech. Univ.</td><td>Effector-directed breeding as a tool to improve soybean resistance to Phytophthora sojae</td></tr>
 			<tr><td>Aaron Lorenz, Univ. of Minnesota</td><td>Announcements and Adjourn</td></tr>
-			<tr><<td colspan='2' >Social Hour &amp; Poster Session</td></tr>
+			<tr><td colspan='2' >Social Hour &amp; Poster Session</td></tr>
 		</body>
 	</table>
 </div>
 
 
-<h3>Wednesday February 24th, 2016 | Versailles 1 Room</h3>
+<h3>Wednesday February 24th, 2016</h3>
 <div class="uk-overflow-auto">
 	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
         <thead>
@@ -120,7 +118,7 @@ sitemap: community/sbw
 
 <h3>SPECIAL MEETINGS and WORKSHOPS</h3>
 
-<h4>Monday 02/22/2016</h4>
+<h4>Monday, February 22, 2016</h4>
 <div class="uk-overflow-auto">
 	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
         <thead>
@@ -142,7 +140,7 @@ sitemap: community/sbw
 	</table>
 </div>
 
-<h4>Tuesday 02/23/2016</h4>
+<h4>Tuesday, February, 2016</h4>
 <div class="uk-overflow-auto">
 	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
         <thead>
@@ -162,7 +160,7 @@ sitemap: community/sbw
 </div>
 
 
-<h4>Wednesday 02/24/2016</h4>
+<h4>Wednesday, February 24, 2016</h4>
 <div class="uk-overflow-auto">
 	<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
         <thead>
@@ -187,7 +185,7 @@ sitemap: community/sbw
 <h3>Agenda for USB Seed Composition Workshop</h3>
 <h4>February 24th and 25th, 2016 | St. Louis, MO | Sheraton Westport Chalet Hotel</h4>
 <p>The 2016 USB Seed Composition Workshop highlights current research on soybean seed composition and quality traits and presentations on the value and delivery of soybean quality traits to the market.  The workshop will begin immediately after the Soybean Breeders' Workshop and thus begin Wednesday February 24th, 2016 at 11:00 am.  It will be in the St Moritz/Bern conference room of the Sheraton Chalet Hotel.</p>
-<hr >
+
 
 <h4>Wednesday February 24th, 2016</h4>
 <div class="uk-overflow-auto">
