--- a/community/sbw/SBW/SBW_2017.html
+++ b/community/sbw/SBW/SBW_2017.html
@@ -6,75 +6,62 @@ sitemap: community/sbw
 ---
 
 <h2>2017 SOYBEAN BREEDERS & PHYSIOLOGISTS WORKSHOP</h2>
-<hr >
-<h3>Registration in Versailles Foyer:</h3>
-Monday, Feb. 13th, 10:30AM - 5PM | Tuesday, Feb. 14th, 7AM - 5PM | Wednesday, Feb. 15th, 7 - 10:30AM
 
+<h4>Workshop Coordinators:</h4>
+<p>
+    <strong>Andrew Scaboo</strong>,(Chair) Univ. of Missouri; 
+    <strong>Evelyn Ortiz-Perez</strong>, Dow AgroSciences;
+    <strong>Curtis Scherder</strong>, Monsanto Co.; 
+    <strong>Leandro Mozzoni</strong>, Monsanto Co.; 
+    <strong>Clint Mapel</strong>, Pioneer; 
+    <strong>Luciano Jaureguy</strong>, Dow AgroSciences;
+    <strong>Bo Zhang</strong>, Virginia Tech.;
+    <strong>Felix Fritschi</strong>, Univ. of Missouri
+</p>
 <hr />
-<h3>Workshop Coordinators:</h3>
-<p><strong>Andrew Scaboo</strong> (Soybean Breeder), Univ. of Missouri - Overall planning and coordination <br />
-Commercial Soybean Breeders - <strong>Evelyn Ortiz-Perez</strong> (Dow AgroSciences), <strong>Curtis Scherder</strong> (Monsanto Co.), <strong>Leandro Mozzoni</strong> (Monsanto Co.), <strong>Clint Mapel</strong> (Pioneer), <strong>Luciano Jaureguy</strong> (Dow AgroSciences)<br />
-<strong>Bo Zhang</strong> (Soybean Breeder), Virginia Tech. - Program Chair, Tuesday General Session<br />
-<strong>Felix Fritschi</strong> (Crop Physiologist), Univ. of Missouri - Program Co-Chair, Tuesday General Session</p>
 
-
-<h3>Monday February 13th, 2017 | Versailles 1 Room</h3>
-
+<h3>Monday February 13th, 2017</h3>
 <div class="uk-overflow-auto">
-<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
-    <thead>
-        <tr>
-            <th class="uk-table-shrink">Start</th>
-            <th class="uk-table-shrink">End</th>
-            <th class="uk-table-expand">Speaker</th>
-            <th class="uk-table-expand">Topic</th>
-        </tr>
-    </thead>
-<body>
-    <tr><td>1:00</td><td>1:15</td><td>Andrew Scaboo, Univ. of Missouri</td><td>Welcome and announcements<br />Recognition of SBW organizers and CSB</td></tr>
-    <tr><th colspan='4'>SESSION I: Precision Ag</th></tr>
-    <tr><td>1:15</td><td>2:00</td><td>Alex Barreiro, Climate Corp. </td><td>Using big data and digital ag. to improve decision making for growers</td></tr>
-    <tr><td>2:00</td><td>2:30</td><td>Larry Purcell, Univ. of Arkansas</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Purcell_et_al_SB_Breeders_Workshop_SOYRISK_St._Louis.pdf'>Optimizing returns and decreasing production risks by managing maturity groups and planting dates for specific locations in the Midsouth</a></td></tr>
-    <tr><td>2:30</td><td>2:45</td><td>Roger Boerma, GSDC</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Dr._Arnold_Matson_SBW_Feb_2017.pdf'>Recognition of Arnold Matson</a></td></tr>
-    <tr><td>2:45</td><td>3:10</td><td colspan='2'>Break</td></tr>
-    <tr><th colspan='4'>SESSION II: NIR for Soybean Improvement</th></tr>
-    <tr><td>3:10</td><td>3:30</td><td>George Graef, Univ. of Nebraska</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/GGraef_NIRS_Breeders_workshop_Feb2017.pdf'>NIRS data in breeding, publications, and databases: Needs for standards and equivalency assessment</a></td></tr>
-    <tr><td>3:30</td><td>4:00</td><td>Charlie Hurburgh, Iowa State Univ.</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/USB_2017-02-13.pdf'>How to have an NIR program that gives accurate data for selections</a></td></tr>
-    <tr><td>4:00</td><td>4:30</td><td>Jason Gillman, USDA-ARS</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Gillman_02142016_NIR_presentation.pdf'>Application of NIR spectroscopy for seed composition improvement in soybean</a></td></tr>
-    <tr><td>4:30</td><td>4:55</td><td>Rich Joost, USB</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Joost_2017_USB_Update_Breeders_Workshop.pdf'>USB Update</a></td></tr>
-    <tr><td>4:55</td><td>5:00</td><td>Andrew Scaboo, Univ. of Missouri</td><td>Announcements and Adjourn</td></tr>
-</body>
-</table>
+    <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+            <tr><td>Andrew Scaboo, Univ. of Missouri</td><td>Welcome and announcements<br />Recognition of SBW organizers and CSB</td></tr>
+            <tr><th colspan='2'>SESSION I: Precision Ag</th></tr>
+            <tr><td>Alex Barreiro, Climate Corp.</td><td>Using big data and digital ag. to improve decision making for growers</td></tr>
+            <tr><td>Larry Purcell, Univ. of Arkansas</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Purcell_et_al_SB_Breeders_Workshop_SOYRISK_St._Louis.pdf'>Optimizing returns and decreasing production risks by managing maturity groups and planting dates for specific locations in the Midsouth</a></td></tr>
+            <tr><td>Roger Boerma, GSDC</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Dr._Arnold_Matson_SBW_Feb_2017.pdf'>Recognition of Arnold Matson</a></td></tr>
+            <tr><td colspan='2'>Break</td></tr>
+            <tr><th colspan='2'>SESSION II: NIR for Soybean Improvement</th></tr>
+            <tr><td>George Graef, Univ. of Nebraska</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/GGraef_NIRS_Breeders_workshop_Feb2017.pdf'>NIRS data in breeding, publications, and databases: Needs for standards and equivalency assessment</a></td></tr>
+            <tr><td>Charlie Hurburgh, Iowa State Univ.</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/USB_2017-02-13.pdf'>How to have an NIR program that gives accurate data for selections</a></td></tr>
+            <tr><td>Jason Gillman, USDA-ARS</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Gillman_02142016_NIR_presentation.pdf'>Application of NIR spectroscopy for seed composition improvement in soybean</a></td></tr>
+            <tr><td>Rich Joost, USB</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Joost_2017_USB_Update_Breeders_Workshop.pdf'>USB Update</a></td></tr>
+            <tr><td>Andrew Scaboo, Univ. of Missouri</td><td>Announcements and Adjourn</td></tr>
+        </body>
+    </table>
 </div>
-<h3>Tuesday Morning February 14th, 2017</h3>
 
-<h4>Continental Breakfast | 7:00 am - 8:00 am| Versailles Foyer</h4>
-Hosted by the Commercial Soybean Breeders
-
-
-<h3>Tuesday February 14th, 2017 | Versailles 1 Room</h3>
-<h4>General Session</h4>
-<p>Chair, Public Soybean Breeder: Bo Zhang - Virginia Tech.<br />
-Co-Chair, Public Crop Physiologist: Felix Fritschi - Univ. of Missouri  </p>
-
+<h3>Tuesday February 14th, 2017</h3>
 <div class="uk-overflow-auto">
-<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
-    <thead>
-        <tr>
-            <th class="uk-table-shrink">Start</th>
-            <th class="uk-table-shrink">End</th>
-            <th class="uk-table-expand">Speaker</th>
-            <th class="uk-table-expand">Topic</th>
-        </tr>
-    </thead>
-<tbody>
-    <tr><td>7:00</td><td>8:00</td><td colspan='2'>Continental Breakfast, Versailles Foyer</td></tr>
-    <tr><td>8:00</td><td>8:05</td><td>Bo Zhang, Virginia Tech. Univ.</td><td>General Introduction</td></tr>
-    <tr><th colspan='4'>SESSION I: Abiotic Stress and Soybean Response Mechanisms<br />Session Chair - Jason Gillman, USDA-ARS</th></tr>
-    <tr><td>8:05</td><td>8:35</td><td>Larry Purcell, Univ. of Arkansas</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Purcell_SB_Breeders_Workshop_Wilting_GWAS_2_14_17.pdf'>Genotypic diversity and GWAS of canopy wilting among maturity group IV accessions</a></td></tr>
-    <tr><td>8:35</td><td>9:05</td><td>Alvaro Sanz Saez De Jauregui, Univ. of Missouri</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Sanz-Saez_et_al.,_2017.pdf'>Identification and introgression of high WUE to improve soybean drought adaptation</a></td></tr>
-    <tr><td>9:05</td><td>9:35</td><td>Patricio Grassini, Univ. of Nebraska</td><td>From plot to field: Technology extrapolation domains in agriculture</td></tr>
-    <tr><td>9:35</td><td>10:05</td><td>Gary Stacey, Univ. of Missouri</td><td>Can biological nitrogen fixation research improve soybean yield?</td></tr>
+    <table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+            <tr><td>Bo Zhang, Virginia Tech. Univ.</td><td>General Introduction</td></tr>
+            <tr><th colspan='2'>SESSION I: Abiotic Stress and Soybean Response Mechanisms | Chair: Jason Gillman, USDA-ARS</th></tr>
+            <tr><td>Larry Purcell, Univ. of Arkansas</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Purcell_SB_Breeders_Workshop_Wilting_GWAS_2_14_17.pdf'>Genotypic diversity and GWAS of canopy wilting among maturity group IV accessions</a></td></tr>
+            <tr><td>Alvaro Sanz Saez De Jauregui, Univ. of Missouri</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Sanz-Saez_et_al.,_2017.pdf'>Identification and introgression of high WUE to improve soybean drought adaptation</a></td></tr>
+            <tr><td>Patricio Grassini, Univ. of Nebraska</td><td>From plot to field: Technology extrapolation domains in agriculture</td></tr>
+            <tr><td>Gary Stacey, Univ. of Missouri</td><td>Can biological nitrogen fixation research improve soybean yield?</td></tr>
     <tr><td>10:05</td><td>10:20</td><td colspan='2'>Coffee Break</td></tr>
     <tr><td>10:20</td><td>10:50</td><td>Krishna Jagadish, Kansas State Univ.</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Jagadish_et_al_Soybean_Breeders_meet_FINAL_MO.pdf'>Soybeans resilience to heat and drought stress during flowering and pod filling - current status, challenges and opportunities</a></td></tr>
     <tr><td>10:50</td><td>11:20</td><td>Moldir Orazaly, Univ. of Arkansas</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Screening,_breeding,_and_mapping_for_flood_in_soybean.pdf'>Screening, mapping, and breeding for flood tolerance in soybean</a></td></tr>
